Archse.Worker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
spec:
  selector:
    app: worker
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 32000
      protocol: TCP
  type: NodePort
